Added Cp and S functions and updated the readme file accordingly

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(Calculate)
 export(Debye_constant)
 export(S1_above)
 export(S2_above)
+export(calculate_Cp)
+export(calculate_S)
 export(count)
 export(entr_1_above)
 importFrom(data.table,data.table)
