--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,20 @@ Package: Calphad2.5
 Type: Package
 Title: 2 1/2th generation Calphad databases
 Version: 0.1.0
-Author: Abdulmonem Obaied <abdulmonem.obaied@rub.de>
+Author: Authors@R: 
+  c(person(given = "Abdulmonem",
+           family = "Obaied",
+           role = c("aut", "cre"),
+           email = "abdulmonem.obaied@rub.de"),
+    person(given = "Florian",
+           family = "Tang",
+           role = "ctb"),
+    person(given = "Irina",
+           family = "Roslyakova",
+           role = "ctb"),
+    person(given = "Moritz",
+           family = "To Baben",
+           role = "ctb"))
 Maintainer: Abdulmonem Obaied <abdulmonem.obaied@rub.de>
 Description: The 2 1/2th Calphad model is capable of extrapolating the Heat capacity (Cp) and Entropy (S) descriptions from the room temperature down to 0 K very accurately, using only two input parameters: The heat capacity and Entropy values at room temperature (Cp298, S298).
 License: MIT + file LICENSE
